--- a/src/pages/practice-studio.astro
+++ b/src/pages/practice-studio.astro
@@ -974,6 +974,12 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 <script>
 	import * as Tone from 'tone';
 
+	// Force reload on iOS Chrome to clear fetch cache
+	if (!sessionStorage.getItem("reloaded")) {
+		sessionStorage.setItem("reloaded", "true");
+		location.reload(true);
+	}
+
 	// console.log('Practice Studio loaded');
 
 	// State variables
